# Hacktable

./: Cargo.toml  hca.toml
src/: main.rs  routes.rs
src/error/: mod.rs
src/models/: mod.rs  models.surql
src/routes/: auth.rs  main.rs  mod.rs
src/routes/workspace/: mod.rs
static/css/: hackclub.css
templates/: index.html.tera  main.html.tera
