[package]
name = "hacktable"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = "0.8.7"
axum-extra = { version = "0.12.3", features = ["typed-header"] }
axum-macros = "0.5.0"
axum_static = "1.8.6"
chrono = "0.4.42"
hackclub_auth_api = "0.0.9"
headers = "0.4.1"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
surrealdb = "2.4.0"
tera = "1.20.1"
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tower-cookies = { version = "0.11.0", features = ["private"] }
